<resources>
    <string name="app_name">Go4Lunch</string>

    <!-- Menu -->
    <string name="menu_search">Search</string>
    <string name="menu_map">Map View</string>
    <string name="menu_list">List View</string>
    <string name="menu_workmates">Workmates</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_your_lunch">Your lunch</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Text displayed within TextViews -->
    <string name="text_restaurant_opening_hours_unknown">Unknown opening hours</string>
    <string name="text_restaurant_opening_hours_closed">Closed</string>
    <string name="text_restaurant_opening_hours_open">Opens</string>
    <string name="text_restaurant_workmates">These workmates eat there</string>
    <string name="text_workmate_name_and_action_workmate_on">eats at</string>
    <string name="text_workmate_name_and_action_workmate_off">hasn\'t decided yet</string>
    <string name="text_workmate_name_and_action_restaurant">is joining</string>
    <string name="text_settings_radius">Research radius</string>
    <string name="text_settings_default_radius">1500 m</string>
    <string name="text_settings_notifications">Activate daily notifications</string>

    <!-- Text displayed within Buttons -->
    <string name="button_restaurant_call">Call</string>
    <string name="button_restaurant_like">Like</string>
    <string name="button_restaurant_website">Website</string>
    <string name="button_restaurant_more_details">More details</string>
    <string name="button_settings_reset">Reset settings</string>
    <string name="button_settings_account_delete">Delete my account</string>
    <string name="button_chat_message_send">Send</string>

    <!-- Text hints -->
    <string name="hint_search_restaurant">Search restaurants</string>
    <string name="hint_chat_message">Your message</string>

    <!-- Text displayed within Dialogs -->
    <string name="dialog_neutral_button_text">OK</string>
    <string name="dialog_positive_button_text">Yes</string>
    <string name="dialog_negative_button_text">No</string>
    <string name="dialog_firebase_error_title">Database error</string>
    <string name="dialog_firebase_error_message">Sorry, could not connect to the database. Please try again later.</string>
    <string name="dialog_api_error_title">Error</string>
    <string name="dialog_api_error_message">Sorry, an error occurred while fetching the data. Please try again later.</string>
    <string name="dialog_api_no_restaurant_found_title">Empty result</string>
    <string name="dialog_api_no_restaurant_found_message">No restaurant matching your criteria was found in the area.</string>
    <string name="dialog_api_place_is_not_restaurant_title">Wrong place type</string>
    <string name="dialog_api_place_is_not_restaurant_message">is not a restaurant.</string>
    <string name="dialog_account_delete_title">Delete account</string>
    <string name="dialog_account_delete_message">You are going to delete your account and its data. Do you confirm?</string>
    <string name="dialog_location_error_title">Location error</string>
    <string name="dialog_location_error_message">Sorry, could not find your location. Please check that your location service is activated or try again later.</string>
    <string name="dialog_location_permission_title">Location permission needed</string>
    <string name="dialog_location_permission_message">This app needs your permission to use the location service. Please grant this permission in order to use its functions.</string>

    <!-- Text displayed within Toasts -->
    <string name="toast_login_success">Your are connected as</string>
    <string name="toast_login_canceled">Please sign in before using this app.</string>
    <string name="toast_login_no_network">Sorry, no network was detected. Please check your network or try again later.</string>
    <string name="toast_login_unknown_error">Sorry, an unknown error occurred. Please try again later.</string>
    <string name="toast_navigation_my_lunch_null">You haven\'t chosen a restaurant yet today.</string>
    <string name="toast_restaurant_lunch_confirmation">You take your lunch at</string>

    <!-- Text displayed within Notifications -->
    <string name="notification_lunch_text">Your lunch at</string>

    <!-- Text previews for layout templates -->
    <string name="template_text_name">Name</string>
    <string name="template_text_distance">Distance</string>
    <string name="template_text_address">Address</string>
    <string name="template_text_cuisine_type">Cuisine type</string>
    <string name="template_text_opening_hours">Opening hours</string>
    <string name="template_text_number">Nb</string>
    <string name="template_text_image">Image</string>
    <string name="template_text_message">Message</string>
    <string name="template_text_date">Date</string>

    <!-- Text used within queries -->
    <string name="query_language">en</string>
    <string name="query_place_type">restaurant</string>

</resources>
