<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_message_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/components_margin_large"
    android:orientation="vertical">

    <TextView
        android:id="@+id/list_message_item_text"
        android:layout_width="@dimen/message_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/components_margin_small"
        android:padding="@dimen/components_margin_large"
        android:background="@drawable/background_message_workmate"
        android:textSize="@dimen/text_size_title"
        android:textColor="@android:color/black"
        android:text="@string/template_text_message" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/list_message_item_sender_image"
            android:layout_width="@dimen/image_small_width"
            android:layout_height="@dimen/image_small_width"
            android:layout_margin="@dimen/components_margin_small"
            android:contentDescription="@string/template_text_image"
            tools:srcCompat="@tools:sample/avatars[12]" />

        <TextView
            android:id="@+id/list_message_item_sender_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/components_margin_small"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_body"
            android:text="@string/template_text_name"/>

        <TextView
            android:id="@+id/list_message_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/components_margin_small"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_body"
            android:text="@string/template_text_date"/>

    </LinearLayout>

</LinearLayout>