<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.fragments.RestaurantFragment">

    <ImageView
        android:id="@+id/fragment_restaurant_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/fragment_restaurant_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars[12]" />

    <LinearLayout
        android:id="@+id/fragment_restaurant_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/fragment_restaurant_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_restaurant_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/components_margin_small"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_title"
                android:text="Name"/>

            <RatingBar
                android:id="@+id/fragment_restaurant_stars"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/components_margin_small"
                android:clickable="false"
                android:numStars="3"
                android:rating="0" />

        </LinearLayout>

        <TextView
            android:id="@+id/fragment_restaurant_cuisineType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/components_margin_small"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_body"
            android:text="Cuisine type"/>

        <TextView
            android:id="@+id/fragment_restaurant_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/components_margin_small"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_body"
            android:text="Address"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragment_restaurant_button_lunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/components_margin_large"
        android:clickable="true"
        android:tint="@color/colorPrimary"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/fragment_restaurant_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fragment_restaurant_description"
        app:srcCompat="@drawable/ic_restaurant" />

    <LinearLayout
        android:id="@+id/fragment_restaurant_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/fragment_restaurant_workmates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_restaurant_description">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_restaurant_button_call"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/components_margin_small"
            android:layout_marginBottom="@dimen/components_margin_small"
            android:layout_marginStart="@dimen/components_margin_large"
            android:layout_marginEnd="@dimen/components_margin_large"
            android:textColor="@color/colorPrimary"
            android:text="@string/button_restaurant_call"
            app:icon="@drawable/ic_phone"
            app:iconTint="@color/colorPrimary"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_restaurant_button_like"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/components_margin_small"
            android:layout_marginBottom="@dimen/components_margin_small"
            android:layout_marginStart="@dimen/components_margin_large"
            android:layout_marginEnd="@dimen/components_margin_large"
            android:textColor="@color/colorPrimary"
            android:text="@string/button_restaurant_like"
            app:icon="@drawable/ic_like"
            app:iconTint="@color/colorPrimary"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_restaurant_button_website"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/components_margin_small"
            android:layout_marginBottom="@dimen/components_margin_small"
            android:layout_marginStart="@dimen/components_margin_large"
            android:layout_marginEnd="@dimen/components_margin_large"
            android:textColor="@color/colorPrimary"
            android:text="@string/button_restaurant_website"
            app:icon="@drawable/ic_website"
            app:iconTint="@color/colorPrimary"/>

    </LinearLayout>

    <View
        android:id="@+id/fragment_restaurant_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="@dimen/components_margin_small"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/fragment_restaurant_workmates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_restaurant_contact" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_restaurant_workmates"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_restaurant_contact" />

</androidx.constraintlayout.widget.ConstraintLayout>